Add javaut as language to app

--- a/app/elements/code-editor/code-editor.html
+++ b/app/elements/code-editor/code-editor.html
@@ -80,6 +80,10 @@
 						mode = 'ace/mode/c_cpp';
 						fileName = 'app.cpp';
 						break;
+					case 'javaut':
+						mode = 'ace/mode/java';
+						fileName = 'Tests.java';
+						break;
 				}
 				this.fileName = fileName;
 				this.$.editor.getSession().setMode({
