--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -148,6 +148,9 @@
 						case 'py':
 							lang.name = 'Python';
 							break;
+						case 'javaut':
+							lang.name = 'Java Unit Tests';
+							break;
 						default:
 							lang.name = 'Undefined';
 							break;
