--- a/app/elements/submission/countdown-timer.html
+++ b/app/elements/submission/countdown-timer.html
@@ -28,11 +28,7 @@
 				}
 			},
 			_formatDuration: function() {
-				var d = this.duration / 1e9;
-				var h = Math.floor(d / 3600) % 24;
-				var m = Math.floor(d / 60 % 60);
-				var s = Math.floor(d % 60);
-				this.formatedDuration = ('0' + h).slice(-2) + ':' +  ('0' + m).slice(-2) + ':' + ('0' + s).slice(-2);
+				this.formatedDuration = util.getFormatedTime(this.duration / 1e9);
 			},
 			start: function() {
 				if (this.duration <= 0) {
